More attempt to fix flicker

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,6 +8,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body.nojs {
+  display: none;
+}
 article,
 aside,
 details,
